@@ -1,3 +1,4 @@
+1999 [profiles] during startup deprecated profiles will be removed
 1998 [x264] invalid zones will be ignored. Bug #3233068
      [Main Window] zones button is always enabled. Bug #3243634
 1997 [AutoEncode] fixed duplicate device type entries
